Fix naming of headline and body mixins to be more consistent and readable.

--- a/scss/mixins/_activity.scss
+++ b/scss/mixins/_activity.scss
@@ -193,11 +193,11 @@ $header_top_margin: 24;
   }
 }
 
-@mixin activity-title($font_size: 26px, $line_height: 30px){
+@mixin activity-title($font_size: 26, $line_height: 30){
   @include OC_Title();
-  font-size: $font_size;
+  font-size: #{$font_size}px;
   color: var(--color);
-  line-height: $line_height;
+  line-height: #{$line_height}px;
   white-space: normal;
   overflow-wrap: break-word;
 
@@ -206,17 +206,26 @@ $header_top_margin: 24;
   }
 }
 
-@mixin activity-headline(){
-  @include OC_Title();
-  font-size: 22px;
-  color: var(--color);
-  line-height: 28px;
-  white-space: normal;
-  overflow-wrap: break-word;
+@mixin activity-title-foc($font_size: 22, $line_height: 28, $color: var(--color), $preview_lines: 2) {
+  @include activity-title($font_size, $line_height);
+  overflow: hidden;
+  text-overflow: ellipsis;
 
-  .emojione {
-    @include emoji-size(18);
+  @if ($preview_lines > 1) {
+    // Truncate last line of text preview
+    display: -webkit-box;
+    -webkit-line-clamp: $preview_lines;
+    /*! autoprefixer: off */
+    -webkit-box-orient: vertical;
+    /* autoprefixer: on */
   }
+
+  color: $color;
+  @include OC_Body_Book();
+  line-height: #{$line_height}px;
+  font-size: #{$font_size}px;
+
+  max-height: #{$line_height * $preview_lines}px;
 }
 
 @mixin poll($paragraph_spacing) {
@@ -1242,7 +1251,7 @@ $header_top_margin: 24;
   }
 }
 
-@mixin activity-body-preview($font_size: 16, $line_height: $bottom_margin, $color: var(--color), $preview_lines: 2){
+@mixin activity-body-foc($font_size: 16, $line_height: $bottom_margin, $color: var(--color), $preview_lines: 2){
 
   @include activity-body($font_size, $line_height, $color, 0);
   overflow: hidden;
