--- a/scss/partials/_stream_reply_item.scss
+++ b/scss/partials/_stream_reply_item.scss
@@ -240,7 +240,7 @@ div.reply-item {
     }
 
     div.reply-item-title {
-      @include activity-title(16px, 20px);
+      @include activity-title(16, 20);
       margin-top: 8px;
 
       @include truncate (2, 20px);
@@ -248,10 +248,10 @@ div.reply-item {
 
     div.reply-item-body {
       margin-top: 4px;
-      @include activity-body-preview(16, 22, var(--color), 3);
+      @include activity-body-foc(16, 22, var(--color), 3);
 
       @include mobile() {
-        @include activity-body-preview(16, 20, var(--color), 2);
+        @include activity-body-foc(16, 20, var(--color), 2);
       }
 
       height: auto;
