--- a/scss/partials/_user_notifications.scss
+++ b/scss/partials/_user_notifications.scss
@@ -267,7 +267,7 @@ div.user-notifications {
           width: calc(100% - 40px);
           padding-right: 8px;
           overflow-wrap: break-word;
-          @include activity-body-preview(14, 18, var(--color), 2);
+          @include activity-body-foc(14, 18, var(--color), 2);
           float: right;
         }
 
